<resources>
    <string name="app_name">Eng_test</string>

    <string-array name="list">
        <item>@string/cate_select</item>
        <item>@string/cate_b</item>
        <item>@string/cate_l</item>
        <item>@string/cate_a</item>
        <item>@string/cate_c</item>
        <item>@string/cate_f</item>
        <item>@string/cate_it</item>
    </string-array>

    <string name="app_title">英単語学習</string>
    <string name="app_start">START</string>
    <string name="app_word">単語一覧</string>
    <string name="app_std">学習状況</string>
    <string name="test_title">Title</string>
    <string name="back_title">タイトルへ戻る</string>
    <string name="next_q">次の問題</string>
    <string name="cotegory">カテゴリ別</string>
    <string name="std_goal">学習目標</string>
    <string name="cate_select">問題カテゴリを選択してください</string>
    <string name="cate_b">ビジネス</string>
    <string name="cate_l">生活</string>
    <string name="cate_a">動物</string>
    <string name="cate_c">宇宙</string>
    <string name="cate_f">食べ物</string>
    <string name="cate_it">IT</string>

</resources>
